added CC export

--- a/src/Makefile
+++ b/src/Makefile
@@ -105,7 +105,7 @@ endif
 
 include Makefile.$(PLATFORM)
 
-export CXX AR LINK WINDRES LDFLAGS CFLAGS LIBS PLATFORM
+export CC CXX AR LINK WINDRES LDFLAGS CFLAGS LIBS PLATFORM
 
 .PHONY: clean
 
