Nintendo switch logging / path fixes

--- a/src/Makefile.switch
+++ b/src/Makefile.switch
@@ -1,13 +1,9 @@
-PREFIX	= $(DEVKITPRO)/devkitA64/bin/aarch64-none-elf-
-
-CC = $(PREFIX)gcc
-CXX = $(PREFIX)g++
-AR = $(PREFIX)ar
+include $(DEVKITPRO)/libnx/switch_rules
 
 ARCH = -march=armv8-a+crc+crypto -mtune=cortex-a57 -mtp=soft -fPIE
-CFLAGS := $(CFLAGS) $(ARCH) -D__SWITCH__
-CXXFLAGS := $(CXXFLAGS) $(ARCH) -D__SWITCH__
+CFLAGS := $(CFLAGS) $(ARCH) -D__SWITCH__ -DCONFIGURE_FHEROES2_DATA=\"//switch/fheroes2\"
+CXXFLAGS := $(CXXFLAGS) $(ARCH) -D__SWITCH__ -DCONFIGURE_FHEROES2_DATA=\"//switch/fheroes2\"
 CFLAGS_TP := $(CFLAGS_TP) $(ARCH)
 CXXFLAGS_TP := $(CXXFLAGS_TP) $(ARCH)
 
-LIBS := $(LIBS) -lSDL2 -lfreetype -lbz2 -lvorbisidec -lmodplug -lmpg123 -lm -lopusfile -logg -lopus -ljpeg -lwebp -specs=$(DEVKITPRO)/libnx/switch.specs
+LIBS := $(LIBS) -lSDL2 -lfreetype -lpng16 -lbz2 -lvorbisidec -lmodplug -lmpg123 -lm -lopusfile -logg -lopus -ljpeg -lwebp -specs=$(DEVKITPRO)/libnx/switch.specs
